--- a/attandance/src/main/resources/templates/application/index.html
+++ b/attandance/src/main/resources/templates/application/index.html
@@ -17,13 +17,7 @@
 </html>
 <script>
     $(document).ready(function () {
-        let item = [];
-        let url;
-        if (getCookie("attendee") === undefined) {
-            url = "/api/v1/training";
-        } else {
-            url = "/api/v1/training/";
-        }
+        let data = [];
         $.ajax({
             url: "/api/v1/training",
             data: "json",
@@ -31,7 +25,7 @@
             method: "GET"
         }).then(function (items) {
             for (let i = 0; i < items.length; i++) {
-                let data =
+                let item =
                     {
                         "trainingName": "<a href=/dochazka/" + items[i].trainingid + ">" + items[i].name + "",
                         "trainingDay": items[i].trainingDay,
@@ -41,33 +35,56 @@
                         "hall": items[i].hall.name,
                         "user": items[i].user.person.lastname + " " + items[i].user.person.firstname
                     };
-                item.push(data);
+                data.push(item);
             }
-            renderJsGrid(item);
+            let jsGrid = $("#jsGrid");
+            renderJsGrid(data, fields, jsGrid);
             $(".loader").hide();
         });
 
     });
 
-    function renderJsGrid(data) {
-        $("#jsGrid").jsGrid({
+    var fields = [
+        { name: "trainingName", type: "text", title: "Název", width: 60 },
+        { name: "trainingDay", type: "text", title: "Den", width: 60 },
+        { name: "type", type: "text", title: "Typ", width: 60 },
+        { name: "starttime", type: "text", title: "Začátek", width: 60 },
+        { name: "endtime", type: "text", title: "Konec", width: 30 },
+        { name: "hall", type: "text", title: "Hala", width: 30 },
+        { name: "user", type: "text", title: "Trenér", width: 30 }
+    ];
+
+    function renderJsGrid(items, fields, grid) {
+        grid.jsGrid({
             width: "100%",
             height: "100%",
 
             searching: true,
             sorting: true,
 
-            data: data,
+            data: items,
 
-            fields: [
-                { name: "trainingName", type: "text", title: "Název", width: 60 },
-                { name: "trainingDay", type: "text", title: "Den", width: 60 },
-                { name: "type", type: "text", title: "Typ", width: 60 },
-                { name: "starttime", type: "text", title: "Začátek", width: 60 },
-                { name: "endtime", type: "text", title: "Konec", width: 30 },
-                { name: "hall", type: "text", title: "Hala", width: 30 },
-                { name: "user", type: "text", title: "Trenér", width: 30 }
-            ]
+            fields: fields,
+            _sortData: function () {
+                var a = this._sortFactor(), b = this._sortField;
+                b && this.data.sort(function (c, d) {
+                    let dbname;
+                    let cbname;
+                    if(d[b.name].includes("</a>")){
+                        dbname = d[b.name].split(">")[1].split("<")[0];
+                    } else {
+                        dbname = d[b.name];
+                    }
+                    if(c[b.name].includes("</a>")){
+                        cbname = c[b.name].split(">")[1].split("<")[0];
+                    } else {
+                        cbname = c[b.name];
+                    }
+                    let temp =  a * b.sortingFunc(cbname, dbname);
+                    return temp;
+                })
+            },
         });
     }
+
 </script>
