--- a/attandance/src/main/resources/templates/attendance/detail.html
+++ b/attandance/src/main/resources/templates/attendance/detail.html
@@ -110,19 +110,20 @@
         let attendees = [];
         let keys = [];
         atts.forEach(function (att) {
-            if (att.attendee.attendeeid == getCookie("attendee") || getCookie("user") !== undefined){
-                if(attendees[att.attendee.person.firstname + "_" + att.attendee.person.lastname] === undefined) {
-                    attendees[att.attendee.person.firstname + "_" + att.attendee.person.lastname] = [];
-                    keys.push(att.attendee.person.firstname + "_" + att.attendee.person.lastname);
+            if(att.attendee.person.active || getCookie("role") > 2) {
+                if (att.attendee.attendeeid == getCookie("attendee") || getCookie("user") !== undefined){
+                    if(attendees[att.attendee.person.firstname + "_" + att.attendee.person.lastname] === undefined) {
+                        attendees[att.attendee.person.firstname + "_" + att.attendee.person.lastname] = [];
+                        keys.push(att.attendee.person.firstname + "_" + att.attendee.person.lastname);
+                    }
+                    let attObject = [];
+                    attObject.push(att.presence);
+                    attObject.push(att.attendanceid);
+                    attendees[att.attendee.person.firstname + "_" + att.attendee.person.lastname].push(attObject);
                 }
-                let attObject = [];
-                attObject.push(att.presence);
-                attObject.push(att.attendanceid);
-                attendees[att.attendee.person.firstname + "_" + att.attendee.person.lastname].push(attObject);
             }
         });
         keys.forEach(function (key) {
-            console.log(key);
             let name = key.replace("_", " ");
             let row = "<tr>" +
                         "<td style='width: 180px'>" + name + "</td>";
