--- a/attandance/src/main/resources/templates/attendees/index.html
+++ b/attandance/src/main/resources/templates/attendees/index.html
@@ -24,40 +24,65 @@
             method: "GET"
         }).then(function (items) {
             for (let i = 0; i < items.length; i++) {
-                let client =
-                    {
-                        "firstname": "<a href=/profil/attendee/" + items[i].attendeeid + ">" + items[i].person.firstname + "",
-                        "lastname": items[i].person.lastname,
-                        "sex": items[i].sex,
-                        "active": items[i].person.active,
-                        "isPaid": items[i].paid
-                    };
-                clients.push(client);
-            }
-            renderJsGrid(clients);
+                if(items[i].person.active || getCookie("role") > 2){
+                    let client =
+                        {
+                            "firstname": "<a href=/profil/attendee/" + items[i].attendeeid + ">" + items[i].person.firstname + "",
+                            "lastname": "<a href=/profil/attendee/" + items[i].attendeeid + ">" + items[i].person.lastname + "",
+                            "sex": items[i].sex,
+                            "active": items[i].person.active,
+                            "isPaid": items[i].paid
+                        };
+                    clients.push(client);
+                    }
+                }
+            let jsGrid = $("#jsGrid");
+            renderJsGrid(clients, fields, jsGrid);
             $(".loader").hide();
         });
 
     });
 
-    function renderJsGrid(clients) {
-        $("#jsGrid").jsGrid({
+    var fields = [
+        { name: "firstname", type: "text", title: "Jméno", width: 60 },
+        { name: "lastname", type: "text", title: "Příjmení", width: 60 },
+        { name: "sex", type: "text", title: "Pohlaví", width: 30 },
+        { name: "active", type: "checkbox", title: "Aktivní" , width: 20},
+        { name: "isPaid", type: "checkbox", title: "Zaplaceno" , width: 20},
+    ];
+
+    function renderJsGrid(items, fields, grid) {
+        grid.jsGrid({
             width: "100%",
             height: "100%",
 
             searching: true,
             sorting: true,
 
-            data: clients,
+            data: items,
 
-            fields: [
-                { name: "firstname", type: "text", title: "Jméno", width: 60 },
-                { name: "lastname", type: "text", title: "Příjmení", width: 60 },
-                { name: "sex", type: "text", title: "Pohlaví", width: 30 },
-                { name: "active", type: "checkbox", title: "Aktivní" , width: 20},
-                { name: "isPaid", type: "checkbox", title: "Zaplaceno" , width: 20},
-            ]
+            fields: fields,
+            _sortData: function () {
+                var a = this._sortFactor(), b = this._sortField;
+                b && this.data.sort(function (c, d) {
+                    let dbname;
+                    let cbname;
+                    if(d[b.name].includes("</a>")){
+                        dbname = d[b.name].split(">")[1].split("<")[0];
+                    } else {
+                        dbname = d[b.name];
+                    }
+                    if(c[b.name].includes("</a>")){
+                        cbname = c[b.name].split(">")[1].split("<")[0];
+                    } else {
+                        cbname = c[b.name];
+                    }
+                    let temp =  a * b.sortingFunc(cbname, dbname);
+                    return temp;
+                })
+            },
         });
     }
+
 </script>
 
