--- a/attandance/src/main/resources/templates/exhibition/detail.html
+++ b/attandance/src/main/resources/templates/exhibition/detail.html
@@ -9,6 +9,7 @@
 <div th:include="layout.html"></div>
 <div class="page-content">
     <button type="button1" class="basic-btn editButton"><a id="editLink">Editace</a></button>
+    <button type="button1" class="basic-btn deleteButton"><a id="deleteActionLink">Smazat</a></button>
     <div>
         <!--TODO Action info-->
         <table class="horniTabulka">
@@ -42,7 +43,7 @@
                 <select class="custom-select" id="user">
                 </select>
             </div>
-            <button type="button2" class="basic-btn" id="sendUser">button2</button>
+            <button type="button" class="btn btn-info" id="sendUser"><a id="addUser">Přidat</a></button>
             <div class="loader"></div>
             <div id="jsGrid"></div>
         </div>
@@ -53,33 +54,34 @@
 <script>
     $(document).ready(function () {
         $("#editLink").attr("href", "/edit/" + [[${action.actionsid}]]);
+        $("#addUser").attr("href", "/action/" + [[${action.actionsid}]]);
+        $("#deleteActionLink").attr("href", "/action/delete/" + [[${action.actionsid}]]);
         let data = [];
         $.ajax({
             url: "/api/v1/user/action/" + "[[${actionid}]]",
             method: "GET",
             success: function (items) {
                 for (let i = 0; i < items.length; i++) {
-                    let item =
-                        {
-                            "firstname": "<a href=/profil/user/" + items[i].userid + ">" + items[i].person.firstname + "",
-                            "lastname": items[i].person.lastname,
-                            "username": items[i].username,
-                            "role": items[i].person.role.name
-                        };
-                    data.push(item);
+                    if(items[i].person.active || getCookie("role") > 2) {
+                        let deleteLink = "/exhibition/deleteUser/" + items[i].userid + "/" + [[${action.actionsid}]];
+                        let item =
+                            {
+                                "firstname": "<a href=/profil/user/" + items[i].userid + ">" + items[i].person.firstname + "",
+                                "lastname": items[i].person.lastname,
+                                "username": items[i].username,
+                                "role": items[i].person.role.name,
+                                "delete": "<button type='button' class='btn btn-danger'><a href=" + deleteLink + ">Odstranit</a></button> "
+                            };
+                        data.push(item);
+                    }
                 }
-                renderJsGrid(data);
+                let jsGrid = $("#jsGrid");
+                renderJsGrid(data, fields, jsGrid);
                 fillSelect();
                 $(".loader").hide();
             }
         });
-
-
-        $("#sendUser").on("click", function () {
-
-        });
     });
-
 
     $("#sendUser").on('click', function () {
             $.ajax({
@@ -98,24 +100,13 @@
             })
         });
 
-    function renderJsGrid(data) {
-        $("#jsGrid").jsGrid({
-            width: "100%",
-            height: "100%",
-
-            searching: true,
-            sorting: true,
-
-            data: data,
-
-            fields: [
-                { name: "firstname", type: "text", title: "Jméno", width: 30 },
-                { name: "lastname", type: "text", title: "Příjmení", width: 30 },
-                { name: "username", type: "text", title: "Uživatelské jméno", width: 30 },
-                { name: "role", type: "text", title: "Typ", width: 30 }
-            ]
-        });
-    }
+    var fields = [
+        { name: "firstname", type: "text", title: "Jméno", width: 30 },
+        { name: "lastname", type: "text", title: "Příjmení", width: 30 },
+        { name: "username", type: "text", title: "Uživatelské jméno", width: 30 },
+        { name: "role", type: "text", title: "Typ", width: 30 },
+        { name: "delete", type: "text", title: "Smazat", width: 50}
+        ];
 
     function fillSelect(){
         let data = $("#jsGrid").jsGrid("option", "data");
@@ -135,11 +126,42 @@
 
     function prepareIds(data){
         let usernames = [];
-        console.log(data);
         data.forEach(function (user) {
             usernames.push(user.username);
         });
         return usernames;
+    }
+
+    function renderJsGrid(items, fields, grid) {
+        grid.jsGrid({
+            width: "100%",
+            height: "100%",
+            searching: true,
+            sorting: true,
+
+            data: items,
+
+            fields: fields,
+            _sortData: function () {
+                var a = this._sortFactor(), b = this._sortField;
+                b && this.data.sort(function (c, d) {
+                    let dbname;
+                    let cbname;
+                    if(d[b.name].includes("</a>")){
+                        dbname = d[b.name].split(">")[1].split("<")[0];
+                    } else {
+                        dbname = d[b.name];
+                    }
+                    if(c[b.name].includes("</a>")){
+                        cbname = c[b.name].split(">")[1].split("<")[0];
+                    } else {
+                        cbname = c[b.name];
+                    }
+                    let temp =  a * b.sortingFunc(cbname, dbname);
+                    return temp;
+                })
+            },
+        });
     }
 
 </script>
