--- a/attandance/src/main/resources/templates/exhibition/index.html
+++ b/attandance/src/main/resources/templates/exhibition/index.html
@@ -24,7 +24,6 @@
             method: "GET",
             success: function (items) {
                 for (let i = 0; i < items.length; i++) {
-                    console.log(items[i]);
                     let item =
                         {
                             "actionName": "<a href=/action/" + items[i].actionsid + ">" + items[i].actionName + "",
@@ -34,28 +33,50 @@
                         };
                     data.push(item);
                 }
-                renderJsGrid(data);
+                let jsGrid = $("#jsGrid");
+                renderJsGrid(data, fields, jsGrid);
                 $(".loader").hide();
             }
         });
     });
 
-    function renderJsGrid(data) {
-        $("#jsGrid").jsGrid({
+    var fields = [
+        { name: "actionName", type: "text", title: "Jméno", width: 30 },
+        { name: "type", type: "text", title: "Typ", width: 30 },
+        { name: "date", type: "text", title: "Datum", width: 30 },
+        { name: "city", type: "text", title: "Město", width: 30 }
+    ];
+
+    function renderJsGrid(items, fields, grid) {
+        grid.jsGrid({
             width: "100%",
             height: "100%",
 
             searching: true,
             sorting: true,
 
-            data: data,
+            data: items,
 
-            fields: [
-                { name: "actionName", type: "text", title: "Jméno", width: 30 },
-                { name: "type", type: "text", title: "Typ", width: 30 },
-                { name: "date", type: "text", title: "Datum", width: 30 },
-                { name: "city", type: "text", title: "Město", width: 30 }
-            ]
+            fields: fields,
+            _sortData: function () {
+                var a = this._sortFactor(), b = this._sortField;
+                b && this.data.sort(function (c, d) {
+                    let dbname;
+                    let cbname;
+                    if(d[b.name].includes("</a>")){
+                        dbname = d[b.name].split(">")[1].split("<")[0];
+                    } else {
+                        dbname = d[b.name];
+                    }
+                    if(c[b.name].includes("</a>")){
+                        cbname = c[b.name].split(">")[1].split("<")[0];
+                    } else {
+                        cbname = c[b.name];
+                    }
+                    let temp =  a * b.sortingFunc(cbname, dbname);
+                    return temp;
+                })
+            },
         });
     }
 </script>
