--- a/attandance/src/main/resources/templates/attendees/detail.html
+++ b/attandance/src/main/resources/templates/attendees/detail.html
@@ -10,12 +10,12 @@
 <span> </span>
 
 <div class="page-content">
-    <button type="button1" class="basic-btn assignUser"><a href="/prihlaska"> Přihláška</a></button>
-    <button type="button2" class="basic-btn excuseUser"><a href="/dochazka/excuse">Omluvit</a></button>
-    <button type="button3" class="basic-btn pay">Zaplatit</button>
-    <button type="button4" class="basic-btn editButton"><a href="/edit">Editace</a></button>
-    <button type="button" class="basic-btn deactivateButton"><a class="deactivateLink">Deaktivace</a></button>
-    <button type="button" class="basic-btn activateButton"><a class="activateLink">Aktivace</a></button>
+    <button type="button1" class="basic-btn assignUser" style="display: none"><a href="/prihlaska">Přihláška</a></button>
+    <button type="button2" class="basic-btn excuseUser" style="display: none"><a href="/dochazka/excuse">Omluvit</a></button>
+    <button type="button3" class="basic-btn pay" style="display: none">Zaplatit</button>
+    <button type="button4" class="basic-btn editButton" style="display: none"><a href="/edit">Editace</a></button>
+    <button type="button" class="basic-btn deactivateButton" style="display: none"><a class="deactivateLink">Deaktivace</a></button>
+    <button type="button" class="basic-btn activateButton" style="display: none"><a class="activateLink">Aktivace</a></button>
 
     <div class="nadpis">
     <p>Profil</p>
@@ -65,8 +65,10 @@
 </body>
 </html>
 <script>
+
     $(document).ready(function () {
-        if(getCookie("role") > 2) {
+        let personRole= getCookie("role");
+        if(personRole > 2) {
             $(".deactivateLink").attr("href", "/deactivate/" + [[${attendee.person.personid}]]);
             $(".activateLink").attr("href", "/activate/" + [[${attendee.person.personid}]]);
             if([[${attendee.person.active}]]) {
@@ -77,11 +79,13 @@
                 $(".activateButton").show();
             }
         }
-        if(getCookie("attendee") != [[${attendee.attendeeid}]] || ![[${attendee.person.active}]]) {
-            $(".assignUser").hide();
-            $(".excuseUser").hide();
-            $(".pay").hide();
-            $(".editButton").hide();
+        if((getCookie("attendee") == [[${attendee.attendeeid}]] && [[${attendee.person.active}]]) && personRole == 4) {
+            $(".assignUser").show();
+            $(".excuseUser").show();
+            $(".pay").show();
+        }
+        if (personRole == 4) {
+            $(".editButton").show();
         }
 
         $.ajax({
