edit after merge

--- a/attandance/src/main/resources/templates/exhibition/index.html
+++ b/attandance/src/main/resources/templates/exhibition/index.html
@@ -9,7 +9,7 @@
 <div th:include="layout.html"></div>
 <div class="page-content">
     <div class="btnLayout">
-    <button type="button1" class="basic-btn" id="addAction" style="display: none"><a href="/vystoupeni/add"> Přidat akci</a></button>
+    <button type="button1" class="btn btn-primary " id="addAction" style="display: none"><a href="/vystoupeni/add"> Přidat akci</a></button>
     </div>
     <div id="jsGrid"></div>
     <div class="loader"></div>
