--- a/attandance/src/main/resources/templates/layout.html
+++ b/attandance/src/main/resources/templates/layout.html
@@ -51,7 +51,7 @@
                     Účástníci
                 </a>
             </li>
-            <button class="btn btn-warning logout fixed-bottom"><a href="/logout"> Odhlásit se</a></button>
+            <button class="btn btn-warning logout fixed-bottom" style="display: none"><a href="/logout"> Odhlásit se</a></button>
         </ul>
 
     </div>
