--- a/attandance/src/main/resources/templates/users/detail.html
+++ b/attandance/src/main/resources/templates/users/detail.html
@@ -10,10 +10,10 @@
 <span> </span>
 
 <div class="page-content">
-    <button type="button" class="basic-btn editButton" style="display: none"><a href="/edit">Editace</a></button>
-    <button type="button" class="basic-btn deactivateButton" style="display: none"><a class="deactivateLink">Deaktivace</a></button>
-    <button type="button" class="basic-btn activateButton" style="display: none"><a class="activateLink">Aktivace</a></button>
-    <button type="button" class="basic-btn promoteButton" style="display: none"><a class="promoteLink">Udělat managerem</a></button>
+    <button type="button" class="btn btn-primary  editButton" style="display: none"><a href="/edit">Editace</a></button>
+    <button type="button" class="btn btn-primary deactivateButton" style="display: none"><a class="deactivateLink">Deaktivace</a></button>
+    <button type="button" class="btn btn-primary  activateButton" style="display: none"><a class="activateLink">Aktivace</a></button>
+    <button type="button" class="btn btn-primary promoteButton" style="display: none"><a class="promoteLink">Udělat managerem</a></button>
 
     <div class="nadpis">
     <p>Profil</p>
